--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.51.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dashjs": "^5.1.1",
     "hls.js": "^1.6.15",
     "lucide-react": "^0.563.0",
     "next": "^15.1.4",
