--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-slider": "^1.3.6",
     "@tanstack/react-query": "^5.51.23",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.52.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.7.1",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
